--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,6 +16,7 @@ ENV SEAFILE_SERVER_DIR="/home/seafile/" \
 # It is possible to do all work via RUN command(s)
 # But it looks much better with all work in script
 COPY build.sh /tmp/build.sh
+COPY seafile-server.patch /tmp/seafile-server.patch
 # Execute our build script and delete it because we won't need it anymore
 RUN sh /tmp/build.sh "$SEAFILE_VERSION" "$SEAFILE_SERVER_DIR" && rm /tmp/build.sh
 
