Remove arg usage from build.sh
Remove setting SEAFILE_SERVER_DIR and SEAFILE_VERSION via build.sh
arguments. These variables are already ensured in the container's
environment, so these are already defined with a sane default value and
are also usable in the script.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -66,7 +66,7 @@ RUN apk add --update --virtual .build_dep \
         util-linux-dev \
         vala \
 # Run the buildscript and remove builddep packages again
- && /tmp/build.sh "$SEAFILE_VERSION" "$SEAFILE_SERVER_DIR" \
+ && /tmp/build.sh \
  && apk del --purge .build_dep
 
 # Container initialization scripts ()
