Do not spam wget progress into logs
Progress during build is not neccessary as it's mostly executed
noninteractive, so it pollutes the logfiles. Setting the -nv flag at
wget still produces output, but not for progress.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -65,6 +65,7 @@ RUN apk add --update --virtual .build_dep \
         sqlite-dev \
         util-linux-dev \
         vala \
+        wget \
 # Run the buildscript and remove builddep packages again
  && /tmp/build.sh \
  && apk del --purge .build_dep
